# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
diff_finder/: __init__.py  gendiff.py  gendiff_argparse.py  generate_diff.py
diff_finder/additional_info/: __init__.py  gendiff_description.py
diff_finder/formatter/: __init__.py  format.py  json.py  plain.py  stylish.py
diff_finder/scripts/: gendiff.py
gendiff/: __init__.py  argparse.py  define_diff.py  generate_diff.py  parse_files.py
gendiff/formatter/: format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: gendiff_test.py
tests/fixtures/: result_json.txt
